src/snapshots/skate__ast_tests__stmt-4.snap
---
source: src/ast_tests.rs
expression: f

---
Let:
  - node: x
    span:
      - 4
      - 5
  - If:
      - Var:
          node: a
          span:
            - 11
            - 12
      - - Expr:
            Var:
              node: b
              span:
                - 14
                - 15
      - - Expr:
            Var:
              node: c
              span:
                - 23
                - 24

