src/snapshots/skate__ast_tests__stmt-5.snap
---
source: src/ast_tests.rs
expression: f

---
Expr:
  For:
    - i
    - If:
        - Var: a
        - []
        - []
    - - Expr:
          Var: e

