src/snapshots/skate__ast_tests__stmt-7.snap
---
source: src/ast_tests.rs
expression: f

---
Print:
  node:
    BinOp:
      - node:
          Literal:
            node:
              Integer: 1
            span:
              - 6
              - 7
              - 100
        span:
          - 6
          - 7
          - 100
      - node: Plus
        span:
          - 8
          - 9
          - 100
      - node:
          If:
            - node:
                Var:
                  node: z
                  span:
                    - 14
                    - 15
                    - 100
              span:
                - 14
                - 15
                - 100
            - node: []
              span:
                - 16
                - 18
                - 100
            - node: []
              span:
                - 22
                - 24
                - 100
        span:
          - 10
          - 25
          - 100
  span:
    - 6
    - 25
    - 100

