src/snapshots/skate__ast_tests__stmt-8.snap
---
source: src/ast_tests.rs
expression: f

---
Print:
  BinOp:
    - Literal:
        Integer: 1
    - Plus
    - If:
        - Var: z
        - []
        - []

