src/snapshots/skate__ast_tests__stmt.snap
---
source: src/ast_tests.rs
expression: f

---
Print:
  node:
    Literal:
      node:
        Integer: 1
      span:
        - 6
        - 7
        - 100
  span:
    - 6
    - 7
    - 100

